--- a/GVRP_Entry_client/index.html
+++ b/GVRP_Entry_client/index.html
@@ -10,6 +10,19 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Scripts -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="auth.js"></script>
+  <script src="api.js"></script>
+  <script src="map.js"></script>
+
+  <script type="module" src="utils/toast.js"></script>
+  <script type="module" src="utils/loading.js"></script>
+  <script type="module" src="utils/validation.js"></script>
+  <script type="module" src="utils/dom-helpers.js"></script>
+
+  <script type="module" src="app.js"></script>
 </head>
 <body>
 <!-- ============================================ -->
@@ -125,6 +138,12 @@
           </button>
         </div>
 
+        <!-- Available Depots Info -->
+        <div id="depots-info" class="depots-info-box" style="display: none;">
+          <strong>📍 Depots có sẵn:</strong>
+          <div id="depots-list-info"></div>
+        </div>
+
         <div id="vehicles-container" class="vehicles-container">
           <!-- Vehicle items will be added here dynamically -->
         </div>
@@ -180,7 +199,21 @@
       <div class="user-menu">
         <span class="user-avatar">👤</span>
         <span class="user-name">Admin</span>
-        <button class="btn-icon">▼</button>
+        <div class="dropdown">
+          <button class="btn-icon">▼</button>
+          <div class="dropdown-content">
+            <a href="#" onclick="event.preventDefault(); alert('Profile - Coming soon!')">
+              👤 Profile
+            </a>
+            <a href="#" onclick="event.preventDefault(); alert('Settings - Coming soon!')">
+              ⚙️ Settings
+            </a>
+            <div class="divider"></div>
+            <a href="#" onclick="event.preventDefault(); handleLogout()" style="color: var(--danger-red);">
+              🚪 Logout
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
@@ -515,10 +548,5 @@
 <!-- Toast Notification -->
 <div id="toast" class="toast"></div>
 
-<!-- Scripts -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="api.js"></script>
-<script src="map.js"></script>
-<script src="app.js"></script>
 </body>
 </html>
