--- a/GVRP_Entry_client/index.html
+++ b/GVRP_Entry_client/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/main.css">
 
   <!-- Scripts -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -468,7 +468,6 @@
           <div class="import-method-options">
             <label class="checkbox-label-inline">
               <input type="checkbox" id="import-overwrite" />
-              <span>Ghi đè đơn hàng đã tồn tại</span>
             </label>
           </div>
         </div>
