--- a/GVRP_Entry_client/index.html
+++ b/GVRP_Entry_client/index.html
@@ -314,96 +314,105 @@
 
       <!-- Orders Table -->
       <div class="table-container" id="table-section">
-        <div class="table-header">
-          <!-- Row 1: Action Buttons -->
-          <div class="table-actions-row">
-            <button class="btn btn-primary" onclick="openAddOrderModal()">
-              <span>+</span> Add Order
-            </button>
-            <button class="btn btn-secondary" onclick="openImportModal()">
-              <span>📥</span> Import Orders
-            </button>
-            <button class="btn btn-success" id="btn-plan-routes" disabled>
-              <span>📊</span> Plan Routes
-              <span class="badge" id="selected-count">0</span>
-            </button>
-            <div class="dropdown">
-              <button class="btn btn-menu">⋮</button>
-              <div class="dropdown-content">
-                <a href="#" onclick="exportOrders()">Export to CSV</a>
-                <a href="#" onclick="deleteSelectedOrders()">Delete Selected</a>
-                <a href="#" onclick="bulkEditOrders()">Bulk Edit</a>
+        <div class="tab-switcher">
+          <button class="tab-btn active" data-tab="orders-tab" onclick="switchContentTab('orders-tab')">Orders</button>
+          <button class="tab-btn" data-tab="route-tab" onclick="switchContentTab('route-tab')">Route</button>
+          <button class="tab-btn" data-tab="timeline-tab" onclick="switchContentTab('timeline-tab')">Timeline</button>
+        </div>
+        <div class="tab-content-item active" id="orders-tab">
+
+          <div class="table-header">
+            <div class="table-actions-row">
+              <button class="btn btn-primary" onclick="openAddOrderModal()">
+                <span>+</span> Add Order
+              </button>
+              <button class="btn btn-secondary" onclick="openImportModal()">
+                <span>📥</span> Import Orders
+              </button>
+              <button class="btn btn-success" id="btn-plan-routes" disabled>
+                <span>📊</span> Plan Routes
+                <span class="badge" id="selected-count">0</span>
+              </button>
+              <div class="dropdown">
+                <button class="btn btn-menu">⋮</button>
+                <div class="dropdown-content">
+                  <a href="#" onclick="exportOrders()">Export to CSV</a>
+                  <a href="#" onclick="deleteSelectedOrders()">Delete Selected</a>
+                  <a href="#" onclick="bulkEditOrders()">Bulk Edit</a>
+                </div>
               </div>
             </div>
+            <div class="table-filters-row">
+              <div class="filter-group">
+                <label>📅</label>
+                <input type="date" id="filter-date" value="2025-10-21" onchange="loadOrders()" />
+              </div>
+              <div class="filter-group">
+                <label>Status:</label>
+                <select id="filter-status" onchange="applyFilters()">
+                  <option value="">All</option>
+                  <option value="SCHEDULED">Scheduled</option>
+                  <option value="ON_ROUTE">On Route</option>
+                  <option value="COMPLETED">Completed</option>
+                  <option value="FAILED">Failed</option>
+                </select>
+              </div>
+              <div class="filter-group search">
+                <span>🔍</span>
+                <input type="text" id="filter-search" placeholder="Search orders..." oninput="applyFilters()" />
+              </div>
+              <button class="btn btn-text" onclick="clearFilters()">Clear</button>
+            </div>
           </div>
 
-          <!-- Row 2: Filters -->
-          <div class="table-filters-row">
-            <div class="filter-group">
-              <label>📅</label>
-              <input type="date" id="filter-date" value="2025-10-21" onchange="loadOrders()" />
+
+          <div class="table-content">
+            <table id="orders-table" class="data-table">
+              <thead>
+              <tr>
+                <th><input type="checkbox" id="select-all" onchange="toggleSelectAll()" /></th>
+                <th>Order Code</th>
+                <th>Customer</th>
+                <th>Address</th>
+                <th>Priority</th>
+                <th>Time window</th>
+                <th>Capacity</th>
+                <th>Time service</th>
+                <th>Notes</th>
+                <th>Status</th>
+                <th>Actions</th>
+              </tr>
+              </thead>
+              <tbody id="orders-tbody">
+              </tbody>
+            </table>
+          </div>
+
+          <div class="table-footer">
+            <div class="footer-info">
+              <span>✅ Selected: <strong id="footer-selected">0</strong> orders</span>
+              <span class="separator">|</span>
+              <span>Showing <strong id="footer-showing">0</strong> of <strong id="footer-total">0</strong> orders</span>
             </div>
-            <div class="filter-group">
-              <label>Status:</label>
-              <select id="filter-status" onchange="applyFilters()">
-                <option value="">All</option>
-                <option value="SCHEDULED">Scheduled</option>
-                <option value="ON_ROUTE">On Route</option>
-                <option value="COMPLETED">Completed</option>
-                <option value="FAILED">Failed</option>
-              </select>
+            <div class="pagination">
+              <button class="btn-page" onclick="previousPage()" disabled>« Previous</button>
+              <button class="btn-page active">1</button>
+              <button class="btn-page" onclick="nextPage()" disabled>Next »</button>
             </div>
-            <div class="filter-group">
-              <label>Priority:</label>
-              <select id="filter-priority" onchange="applyFilters()">
-                <option value="">All</option>
-                <option value="high">High (1-3)</option>
-                <option value="medium">Medium (4-6)</option>
-                <option value="low">Low (7+)</option>
-              </select>
-            </div>
-            <div class="filter-group search">
-              <span>🔍</span>
-              <input type="text" id="filter-search" placeholder="Search orders..." oninput="applyFilters()" />
-            </div>
-            <button class="btn btn-text" onclick="clearFilters()">Clear</button>
           </div>
         </div>
 
-        <!-- Table Content -->
-        <div class="table-content">
-          <table id="orders-table" class="data-table">
-            <thead>
-            <tr>
-              <th><input type="checkbox" id="select-all" onchange="toggleSelectAll()" /></th>
-              <th>Order Code</th>
-              <th>Customer</th>
-              <th>Address</th>
-              <th>Priority</th>
-              <th>Time window</th>
-              <th>Capacity</th>
-              <th>Time service</th>
-              <th>Notes</th>
-              <th>Status</th>
-              <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody id="orders-tbody">
-            </tbody>
-          </table>
+        <div class="tab-content-item" id="route-tab">
+          <div class="route-planning-view">
+            <h3>🗺️ Route Planning & Optimization</h3>
+            <p>Nội dung hiển thị các tuyến đường đã được quy hoạch, bản đồ tương tác, và danh sách Stops/Jobs.</p>
+          </div>
         </div>
 
-        <!-- Table Footer -->
-        <div class="table-footer">
-          <div class="footer-info">
-            <span>✅ Selected: <strong id="footer-selected">0</strong> orders</span>
-            <span class="separator">|</span>
-            <span>Showing <strong id="footer-showing">0</strong> of <strong id="footer-total">0</strong> orders</span>
-          </div>
-          <div class="pagination">
-            <button class="btn-page" onclick="previousPage()" disabled>« Previous</button>
-            <button class="btn-page active">1</button>
-            <button class="btn-page" onclick="nextPage()" disabled>Next »</button>
+        <div class="tab-content-item" id="timeline-tab">
+          <div class="timeline-view">
+            <h3>🕒 Route Timeline (Gantt Chart)</h3>
+            <p>Nội dung hiển thị biểu đồ Gantt, trực quan hóa lịch trình xe chạy và thời gian phục vụ.</p>
           </div>
         </div>
       </div>
