--- a/GVRP_Entry_client/login.html
+++ b/GVRP_Entry_client/login.html
@@ -6,7 +6,7 @@
     <title>Login - VRP System</title>
 
     <!-- Login Styles -->
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
 <div class="login-container">
@@ -161,7 +161,7 @@
 <div id="toast" class="toast"></div>
 
 <!-- Scripts -->
-<script src="auth.js"></script>
-<script src="login.js"></script>
+<script src="scripts/auth.js"></script>
+<script src="scripts/login.js"></script>
 </body>
 </html>
